2010-05-11 Magnus Hagdorn
 * Makefile.am: add new sub directory
 * configure.in: add check whether erosion extension should be built, create
   new Makefiles
 * extensions: new directory for extensions
 * extensions/erosion: copied from old branch
 * extensions/erosion/erosion_version.F90.in: removed - unused
 * extensions/erosion/erosion_sediment.F90: fix module references
 * extensions/erosion/erosion.F90: ditto
 * extensions/erosion/Makefile.am: fix references to various libs and scripts
 * tests/EISMINT/src/Makefile.am: make EISMINT1/2 climate driver a library

2010-05-11 Magnus Hagdorn
 * m4macros/glimmer.m4: fix macro to look for new config script

2010-05-10 Magnus Hagdorn
 * configure.in: create new file
 * make.rules.in: configure now generates make.rules with correct SGE options
 * example-drivers/eis/fenscan/fenscan.config: hot file should store variables
   in double precision
 * example-drivers/eis/fenscan/fenscan-gthf.config: ditto
 * tests/EISMINT/EISMINT-2/e2.[afik].config: ditto
 * example-drivers/eis/fenscan/Makefile.am: include correct make rules
 * example-drivers/EISMINT-3/EISMINT-3/Makefile.am: ditto
 * tests/EISMINT/benchmarks/Makefile.am: ditto
 * tests/EISMINT/EISMINT-1/Makefile.am: ditto
 * tests/EISMINT/EISMINT-2/Makefile.am: ditto
 * tests/EISMINT/isos/Makefile.am: ditto
 * tests/EISMINT/lin-non_lin/Makefile.am: ditto

2010-05-10 Magnus Hagdorn
 * merged glimmer-cism-gcm r1460:HEAD

2010-05-09 William Lipscomb
 More code cleanup:  Removed most '!lipscomb' comments, and put ifdefs around
	debugging write statements.  The remaining comments indicate where I have
	questions or where there is still work to do.  At this point the code is
	ready to be merged into the glimmer-cism2 trunk.
 * libglide/glide.F90
 * libglide/glide_setup.F90
 * libglide/glimmer_ncio.F90
 * libglide/glide_types.F90
 * libglide/glide_temp.F90
 * libglide/glide_diagnostics.F90
 * libglimmer/glimmer_paramets.F90
 * libglimmer/glimmer_log.F90
 * libglimmer/nc2config.F90